--- a/Coursework/first.html
+++ b/Coursework/first.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>First Day</title>
 </head>
 
 <body>
@@ -31,12 +31,16 @@
 </div>
 
 <button type="submit">Login! </button>
+
 </form>
+
 <br>
+
 <hr>
 <div>
 <p> Choose your favourite videogame series!</p>
 <hr>
+
 <form>
     <input type="radio" id="mario" name="fav_game" value="Super Mario">
     <label for="mario">Super Mario Bros.</label><br>
@@ -46,12 +50,14 @@
     <label for="kirby">Kirby</label>
 </form>
 <br>
-<hr>
-<div>
-<p>Select all fast-food locations you frequent.</p>
-<hr>
-<form>
 
+<div>
+
+<hr>
+<p>Select all fast-food chains you frequent.</p>
+<hr>
+
+<form>
     <input type="checkbox" id="mcdonalds" name="fav_restaurant" value="mcdonalds"
     <label for="mcdonalds">McDonalds</label> <br>
     
@@ -66,7 +72,6 @@
     
     <input type="checkbox" id="popeyes" name="fav_restaurant" value="popeyes"
     <label for="popeyes">Popeye's</label>
-
 </form>
 
 </div>
