--- a/Coursework/six.html
+++ b/Coursework/six.html
@@ -30,6 +30,7 @@
             width: 250px;
             border-radius: 25px;
             justify-content: center;
+            /* z-index: 200; */
         }
 
         #header{
